--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@ hs_err_pid*
 replay_pid*
 
 build/
+
+#Ignore the following files
+.gradle/
+.idea/
+.DS_Store
+build/
+out/
+bin/
+/.classpath
+/.project
+/.settings
